Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -89,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Deleting cells"
+    "#### Deleting cells"
    ]
   },
   {
