--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# If we wish to quickly add a new cell we can do so with the following steps: \n",
+    "If we wish to quickly add a new cell we can do so with the following steps: \n",
     "\n",
     "* Make sure we are not in insert mode, but in escape mode\n",
     "    * *Remember we can tell we are in insert mode when we have a green border around our cell.*\n",
